[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "gymnasium>=1.2.2",
    "numpy>=2.3.4",
    "requests==2.31.0",
    "sseclient-py==1.8.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "werkzeug==3.0.1",
]
